--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- Exposes the OpenAPI documentation -->
+        <!-- e.g. at http://localhost:50598/swagger-ui/index.html -->
+        <!-- JSON docs e.g. at http://localhost:50598/v3/api-docs -->
+        <!--dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.3</version>
+        </dependency-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
