--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,6 +3,9 @@ spring:
     admin:
       client: # don't register on spring boot admin
         url:
+    test:
+      process:
+        timeout: 20
 eureka:
   client:
     registerWithEureka: false # don't register with Eureka
