--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,7 +6,15 @@ spring:
     test:
       process:
         timeout: 20
+  cloud:
+    discovery:
+      enabled: false
+    config:
+      discovery:
+        enabled: false
+      enabled: false
 eureka:
   client:
+    enabled: false
     registerWithEureka: false # don't register with Eureka
     fetchRegistry: false
