--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,9 +61,9 @@ zeebe:
     cloud:
       # Cluster URL: e.g. 68446f73-e278-44a3-b676-04592b9bc0d3.ont-1.zeebe.camunda.io
       region: ont-1
-      clusterId: 1239c677-72fe-4c01-aa68-f9e4efded802
-      clientId: XyeybWkT~R.u2CRq8cw-uYchxk2jYE1U
-      clientSecret: RkqIjurRjEqDXgHo-CA~5Sh4Y~JI0Rlj2zR6CWP_LwMn9MWLgWH9rlEE11EGyp.~
+      clusterId: f5ede3a7-3a21-414c-bf60-cb1e59901baf
+      clientId: Oj4Fwpqk5KoDCQQ1.mHzHD5.Ia-2yuwW
+      clientSecret: pMD_-y.GgmghNlUInbQTmHlqaXMJDjzqhFXL.Pz0b-W4TjiPElSB1tMb689CLO2v
       oAuthUrl: https://login.cloud.camunda.io/oauth/token
     api:
       taskSearchUrl: https://${zeebe.client.cloud.region}.tasklist.camunda.io/${zeebe.client.cloud.clusterId}/v1/tasks/search
