--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,8 @@
 spring:
+  application:
+    custom:
+      config:
+        taskService: repo
   boot:
     admin:
       client: # don't register on spring boot admin
