--- a/src/test/resources/application-test-noauth.yml
+++ b/src/test/resources/application-test-noauth.yml
@@ -19,7 +19,8 @@ spring:
       enabled: false
   security:
     custom:
-      type: NONE
+      config:
+        type: NONE
 eureka:
   client:
     enabled: false
