--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,16 @@ spring:
         url: http://localhost:8100
         # When shut down deregisters from spring boot admin
         auto-deregistration: true
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
+      config:
+        enabled: false
+    #config:
+    #import: optional:configserver:http://myhost:8888
   security:
     oauth2:
       client:
@@ -113,13 +123,13 @@ management:
       enabled: true
     os:
       enabled: true
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: true
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    leaseRenewalIntervalInSeconds: 10
+#    metadataMap:
+#      instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
