--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <zeebe.version>8.1.17</zeebe.version>
     </properties>
     <dependencies>
+        <!--========= gRPC Stubs =======-->
+        <dependency>
+            <groupId>com.interview.test</groupId>
+            <artifactId>car-hire-proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--============ Web ============-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -77,6 +83,12 @@
 <!--                </exclusion>-->
 <!--            </exclusions>-->
 <!--        </dependency>-->
+        <!--========== gRPC Client Spring Boot starter ==========-->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>2.14.0.RELEASE</version>
+        </dependency>
         <!--==========Commons Lang ==========-->
         <dependency>
             <groupId>org.apache.commons</groupId>
