--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <grpc-starter.version>2.14.0.RELEASE</grpc-starter.version>
         <commons-lang.version>3.12.0</commons-lang.version>
         <spotless-plugin.version>2.36.0</spotless-plugin.version>
+        <jacoco.version>0.8.8</jacoco.version>
     </properties>
     <dependencies>
         <!--========= gRPC Stubs ========-->
@@ -140,11 +141,11 @@
             <scope>test</scope>
         </dependency>
         <!--===== Code Clean =====-->
-        <dependency>
+        <!--dependency>
             <groupId>com.diffplug.spotless</groupId>
             <artifactId>spotless-maven-plugin</artifactId>
             <version>${spotless-plugin.version}</version>
-        </dependency>
+        </dependency-->
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -191,8 +192,8 @@
                 <!-- Will generate a target/classes/git.properties with information
                 available at the /actuator/info actuator end point
                 -->
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>get-the-git-infos</id>
@@ -221,7 +222,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>${jacoco.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>com/interview/snippet/**</exclude>
@@ -246,6 +247,7 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless-plugin.version}</version>
                 <configuration>
                     <ratchetFrom>origin/main</ratchetFrom>
                     <java>
